@@ -8,7 +8,6 @@
 
     <flash-messages></flash-messages>
     <form class="form-field-full" [formGroup]="loginForm">
-
       <mat-form-field appearance="outline">
         <mat-label>{{'login.username' | translate}}:</mat-label>
         <input matInput placeholder="e-mail" formControlName="username" required>
