@@ -1,14 +1,33 @@
 <div class="w-full h-full" fxLayout="row wrap">
   <mat-card class="mat-elevation-z4 m-auto" style="max-width: 380px;">
-    <mat-card-title class="m-b-24">
-      {{'register.welcome' | translate}}, <br />
-      {{'register.title' | translate}}
-    </mat-card-title>
+    <mat-card-header>
+      <div mat-card-avatar class="tool-header-avatar-image"></div>
+      <mat-card-title class="text-center m-b-24">{{'register.welcome' | translate}}</mat-card-title>
 
+      <mat-card-subtitle>{{'register.title' | translate}}</mat-card-subtitle>
+    </mat-card-header>
+
+    <flash-messages></flash-messages>
     <form class="form-field-full" [formGroup]="registerForm">
       <mat-form-field appearance="outline">
+        <mat-label>{{'register.firstname' | translate}}</mat-label>
+        <input matInput formControlName="firstname" required>
+        <mat-error *ngIf="registerForm.get('firstname').invalid">
+          {{'validations.required' | translate}}
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>{{'register.lastname' | translate}}</mat-label>
+        <input matInput formControlName="lastname" required>
+        <mat-error *ngIf="registerForm.get('lastname').invalid">
+          {{'validations.required' | translate}}
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
         <mat-label>{{'login.username' | translate}}</mat-label>
-        <input matInput formControlName="username" required>
+        <input matInput placeholder="e-mail" formControlName="username" required>
         <mat-error *ngIf="registerForm.get('username').invalid">
           {{'validations.required' | translate}}
         </mat-error>
@@ -16,7 +35,7 @@
 
       <mat-form-field appearance="outline">
         <mat-label>{{'login.password' | translate}}</mat-label>
-        <input matInput type="password" formControlName="password" required>
+        <input matInput placeholder="password" type="password" formControlName="password" required>
         <mat-error *ngIf="registerForm.get('password').invalid">
           {{'validations.required' | translate}}
         </mat-error>
@@ -35,12 +54,11 @@
       </mat-form-field>
 
       <div class="m-y-16" fxLayout="row" fxLayoutAlign="space-between center">
-        <mat-checkbox>{{'register.agree' | translate}}</mat-checkbox>
+        <mat-checkbox formControlName="agree">{{'register.agree' | translate}}</mat-checkbox>
       </div>
 
-      <button class="w-full" mat-raised-button color="primary">
-        {{'register.register' | translate}}
-      </button>
+      <button class="w-full" mat-raised-button color="primary" [disabled]="registerForm.invalid"
+        (click)="register()">{{'register.register' | translate}}</button>
 
       <div class="m-t-16">{{'register.have_an_account' | translate}}?
         <a routerLink="/auth/login">{{'login.login' | translate}}</a>
