@@ -1,5 +1,8 @@
 import { Component, OnInit } from '@angular/core';
 import { FormGroup, FormBuilder, Validators, FormControl } from '@angular/forms';
+import { FlashMessagesService } from 'flash-messages-angular';
+import { UserService } from 'src/app/services/user-service/user.service';
+import { Router } from '@angular/router';
 
 @Component({
   selector: 'app-register',
@@ -8,15 +11,49 @@ import { FormGroup, FormBuilder, Validators, FormControl } from '@angular/forms'
 export class RegisterComponent implements OnInit {
   registerForm: FormGroup;
 
-  constructor(private fb: FormBuilder) {
+  constructor(private fb: FormBuilder,
+              private user: UserService,
+              private router: Router,
+              private flashMessage: FlashMessagesService) {}
+
+  ngOnInit() {
     this.registerForm = this.fb.group({
-      username: ['', [Validators.required]],
-      password: ['', [Validators.required]],
+      firstname:       ['', [Validators.required]],
+      lastname:        ['', [Validators.required]],
+      username:        ['', [Validators.required]],
+      password:        ['', [Validators.required]],
       confirmPassword: ['', [this.confirmValidator]],
+      agree:           [true, [this.termsFormControl]],
     });
   }
 
-  ngOnInit() {}
+  get firstname() {
+    return this.registerForm.get("firstname");
+  }
+
+  get lastname() {
+    return this.registerForm.get("lastname");
+  }
+
+  get username() {
+    return this.registerForm.get("username");
+  }
+
+  get password() {
+    return this.registerForm.get("password");
+  }
+
+  get confirmPassword() {
+    return this.registerForm.get("confirmPassword");
+  }
+
+  get agree() {
+    return this.registerForm.get("agree");
+  }
+
+  termsFormControl = (control: FormControl) => {    
+    return !control.value ? { 'required': true } : null;
+  };
 
   confirmValidator = (control: FormControl): { [k: string]: boolean } => {
     if (!control.value) {
@@ -26,4 +63,27 @@ export class RegisterComponent implements OnInit {
     }
     return {};
   };
+
+  register() {
+    /* console.error("RegisterComponent: register():",
+         this.firstname.value, this.lastname.value, this.username.value,
+         this.password.value, this.confirmPassword.value,
+         this.agree.value); */
+    var regInfo = {
+      name:       this.firstname.value+' '+this.lastname.value,
+      first_name: this.firstname.value,
+      last_name:  this.lastname.value,
+      email:      this.username.value,
+      password:   this.password.value,
+    }
+    this.user.register(regInfo)
+      .then((response) => {
+        this.flashMessage.show(response.message,
+          { cssClass: 'alert alert-warning', timeout: 10000 });
+        this.router.navigateByUrl('/auth/login');
+      },(error) => {
+        this.flashMessage.show(error.message,
+          { cssClass: 'alert alert-warning', timeout: 10000 });
+      });
+  }; /* register */
 }
