@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+//@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 /*@import url(css/bootstrap.min.css);*/
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
